data/derived/fa15/progs/unify/prog0741.ml.out
Characters 57-64:
  |h::t -> h + sumList ;;
               ^^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
